--- a/watchlist.html
+++ b/watchlist.html
@@ -14,6 +14,62 @@
     <title>Watchlist</title>
   </head>
   <body>
+    <header>
+      <nav class="nav-container">
+        <h1>Find your film</h1>
+        <a href="index.html" class="nav-link"><h2>Search for movies</h2></a>
+      </nav>
+      <form action="" class="film-search-form">
+        <input type="text" class="search-input" />
+        <button class="search-btn" type="submit">Search</button>
+      </form>
+    </header>
+    <main>
+      <!-- <section class="initial-placeholder">
+        <img
+          src="./images/start-searching.png"
+          alt="Film reel image"
+          class="film-reel-image"
+        />
+        <h2 class="initial-placeholder-text">Start exploring</h2>
+      </section> -->
+      <!-- <section class="no-data">
+        <p class="no-data-text">
+          Unable to find what you're looking for. Please try another search.
+        </p>
+      </section> -->
+      <section class="film-list">
+        <article class="film">
+          <img src="./images/movie-img.png" class="movie-poster" alt="" />
+          <div class="movie-details">
+            <div class="title-rating">
+              <h3 class="movie-title">Blade Runner</h3>
+              <img
+                src="./images/star-icon.png"
+                class="rating-star"
+                alt="star rating"
+              />
+              <p class="rating">8.1</p>
+            </div>
+            <div class="movie-time-genre-add">
+              <p class="movie-time">116 min</p>
+              <p class="movie-genre">Drama, Mystery, Sci-fi</p>
+              <img
+                src="./images/minus-icon.png"
+                alt="remove from watchlist"
+                class="remove-icon"
+              />
+              <p>Remove</p>
+            </div>
+            <p class="movie-description">
+              A blade runner must pursue and terminate four replicants who stole
+              a ship in space, and have returned to Earth to find their creator.
+            </p>
+          </div>
+        </article>
+        <hr class="film-divider" />
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
