Added blank watchlist HTML and CSS

--- a/watchlist.html
+++ b/watchlist.html
@@ -38,7 +38,7 @@
           Unable to find what you're looking for. Please try another search.
         </p>
       </section> -->
-      <section class="film-list">
+      <!-- <section class="film-list">
         <article class="film">
           <img src="./images/movie-img.png" class="movie-poster" alt="" />
           <div class="movie-details">
@@ -68,6 +68,19 @@
           </div>
         </article>
         <hr class="film-divider" />
+      </section> -->
+      <section class="empty-watchlist">
+        <h3 class="empty-watchlist-header">
+          Your watchlist is looking a little empty...
+        </h3>
+        <a href="index.html" class="add-to-list-link">
+          <img
+            src="./images/plus-icon.png"
+            alt="add to watchlist"
+            class="add-icon"
+          />
+          <p class="empty-list-text">Let's add some movies</p>
+        </a>
       </section>
     </main>
     <script src="script.js"></script>
