Added search abilities in javascript using the omdb api

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a href="watchlist.html" class="nav-link"><h2>My Watchlist</h2></a>
       </nav>
       <form action="" class="film-search-form">
-        <input type="text" class="search-input" />
-        <button class="search-btn" type="submit">Search</button>
+        <input type="text" class="search-input" id="search-input" />
+        <button class="search-btn" id="search-btn">Search</button>
       </form>
     </header>
     <main>
@@ -38,7 +38,7 @@
           Unable to find what you're looking for. Please try another search.
         </p>
       </section> -->
-      <section class="film-list">
+      <section class="film-list" id="film-list">
         <article class="film">
           <img src="./images/movie-img.png" class="movie-poster" alt="" />
           <div class="movie-details">
