Added list add and remove functionality

--- a/watchlist.html
+++ b/watchlist.html
@@ -19,70 +19,11 @@
         <h1>Find your film</h1>
         <a href="index.html" class="nav-link"><h2>Search for movies</h2></a>
       </nav>
-      <form action="" class="film-search-form">
-        <input type="text" class="search-input" />
-        <button class="search-btn" type="submit">Search</button>
-      </form>
     </header>
     <main>
-      <!-- <section class="initial-placeholder">
-        <img
-          src="./images/start-searching.png"
-          alt="Film reel image"
-          class="film-reel-image"
-        />
-        <h2 class="initial-placeholder-text">Start exploring</h2>
-      </section> -->
-      <!-- <section class="no-data">
-        <p class="no-data-text">
-          Unable to find what you're looking for. Please try another search.
-        </p>
-      </section> -->
-      <!-- <section class="film-list">
-        <article class="film">
-          <img src="./images/movie-img.png" class="movie-poster" alt="" />
-          <div class="movie-details">
-            <div class="title-rating">
-              <h3 class="movie-title">Blade Runner</h3>
-              <img
-                src="./images/star-icon.png"
-                class="rating-star"
-                alt="star rating"
-              />
-              <p class="rating">8.1</p>
-            </div>
-            <div class="movie-time-genre-add">
-              <p class="movie-time">116 min</p>
-              <p class="movie-genre">Drama, Mystery, Sci-fi</p>
-              <img
-                src="./images/minus-icon.png"
-                alt="remove from watchlist"
-                class="remove-icon"
-              />
-              <p>Remove</p>
-            </div>
-            <p class="movie-description">
-              A blade runner must pursue and terminate four replicants who stole
-              a ship in space, and have returned to Earth to find their creator.
-            </p>
-          </div>
-        </article>
-        <hr class="film-divider" />
-      </section> -->
-      <section class="empty-watchlist">
-        <h3 class="empty-watchlist-header">
-          Your watchlist is looking a little empty...
-        </h3>
-        <a href="index.html" class="add-to-list-link">
-          <img
-            src="./images/plus-icon.png"
-            alt="add to watchlist"
-            class="add-icon"
-          />
-          <p class="empty-list-text">Let's add some movies</p>
-        </a>
-      </section>
+      <section class="watchlist" id="watchlist"></section>
+      <section class="empty-watchlist" id="empty-watchlist"></section>
     </main>
-    <script src="script.js"></script>
+    <script src="watchList.js"></script>
   </body>
 </html>
