--- a/index.html
+++ b/index.html
@@ -25,50 +25,17 @@
       </form>
     </header>
     <main>
-      <!-- <section class="initial-placeholder">
-        <img
-          src="./images/start-searching.png"
-          alt="Film reel image"
-          class="film-reel-image"
-        />
-        <h2 class="initial-placeholder-text">Start exploring</h2>
-      </section> -->
-      <!-- <section class="no-data">
-        <p class="no-data-text">
-          Unable to find what you're looking for. Please try another search.
-        </p>
-      </section> -->
-      <section class="film-list" id="film-list">
-        <article class="film">
-          <img src="./images/movie-img.png" class="movie-poster" alt="" />
-          <div class="movie-details">
-            <div class="title-rating">
-              <h3 class="movie-title">Blade Runner</h3>
-              <img
-                src="./images/star-icon.png"
-                class="rating-star"
-                alt="star rating"
-              />
-              <p class="rating">8.1</p>
-            </div>
-            <div class="movie-time-genre-add">
-              <p class="movie-time">116 min</p>
-              <p class="movie-genre">Drama, Mystery, Sci-fi</p>
-              <img
-                src="./images/plus-icon.png"
-                alt="add to watchlist"
-                class="add-icon"
-              />
-              <p>Watchlist</p>
-            </div>
-            <p class="movie-description">
-              A blade runner must pursue and terminate four replicants who stole
-              a ship in space, and have returned to Earth to find their creator.
-            </p>
-          </div>
-        </article>
-        <hr class="film-divider" />
+      <section class="initial-placeholder" id="initial-placeholder">
+        <div class="placeholder-container">
+          <img
+            src="./images/start-searching.png"
+            alt="Film reel image"
+            class="film-reel-image"
+          />
+          <h2 class="initial-placeholder-text">Start exploring</h2>
+        </div>
       </section>
+      <section class="film-list" id="film-list"></section>
     </main>
     <script src="script.js"></script>
   </body>
